[gd_scene load_steps=59 format=3 uid="uid://w5upskxna6ds"]

[ext_resource type="Script" path="res://Scenes/NPC/oak.gd" id="1_4ift8"]
[ext_resource type="Texture2D" uid="uid://bbr4k5128eafp" path="res://Sprites/oak_sprite.png" id="2_05a7t"]
[ext_resource type="PackedScene" uid="uid://b43os1en518o1" path="res://Scenes/NPC/shadow.tscn" id="2_rdqlm"]
[ext_resource type="Texture2D" uid="uid://bfuf4j5xlxapr" path="res://Sprites/jump_landing_dust.png" id="4_nuy0e"]
[ext_resource type="Script" path="res://Scripts/dust_effect.gd" id="5_btt4e"]
[ext_resource type="Script" path="res://Scripts/camera2d.gd" id="6_kxb0c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lconu"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmnmb"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sena7"]
atlas = ExtResource("4_nuy0e")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwju5"]
atlas = ExtResource("4_nuy0e")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdpfa"]
atlas = ExtResource("4_nuy0e")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_etf16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sena7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwju5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdpfa")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_lr4i5"]
resource_name = "Chair"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_but0f"]
resource_name = "ChairDown"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_qwynv"]
resource_name = "idleDown"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_5r8xp"]
resource_name = "idleLeft"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_ybe2m"]
resource_name = "idleRight"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_eb2pa"]
resource_name = "idleUp"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_ywknl"]
resource_name = "moveDown"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_tmgbg"]
resource_name = "moveLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}

[sub_resource type="Animation" id="Animation_jkftj"]
resource_name = "moveRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 4]
}

[sub_resource type="Animation" id="Animation_gb436"]
resource_name = "moveUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 10, 9, 10]
}

[sub_resource type="Animation" id="Animation_43jer"]
resource_name = "turnDown"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_q25kq"]
resource_name = "turnLeft"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_edgoy"]
resource_name = "turnRight"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_0acum"]
resource_name = "turnUp"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 10]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1kj2f"]
_data = {
"Chair": SubResource("Animation_lr4i5"),
"ChairDown": SubResource("Animation_but0f"),
"idleDown": SubResource("Animation_qwynv"),
"idleLeft": SubResource("Animation_5r8xp"),
"idleRight": SubResource("Animation_ybe2m"),
"idleUp": SubResource("Animation_eb2pa"),
"moveDown": SubResource("Animation_ywknl"),
"moveLeft": SubResource("Animation_tmgbg"),
"moveRight": SubResource("Animation_jkftj"),
"moveUp": SubResource("Animation_gb436"),
"turnDown": SubResource("Animation_43jer"),
"turnLeft": SubResource("Animation_q25kq"),
"turnRight": SubResource("Animation_edgoy"),
"turnUp": SubResource("Animation_0acum")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vvql1"]
animation = &"Chair"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g8cjr"]
animation = &"ChairDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ghjrd"]
animation = &"idleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_stpxq"]
animation = &"idleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dutwh"]
animation = &"idleUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x1kj6"]
animation = &"idleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_53o1p"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ghjrd")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_stpxq")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_dutwh")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_x1kj6")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1
sync = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_34ln1"]
animation = &"moveDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pjitv"]
animation = &"moveUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5pwtw"]
animation = &"moveRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nag46"]
animation = &"moveLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_yk6ly"]
blend_point_0/node = SubResource("AnimationNodeAnimation_34ln1")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_pjitv")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_5pwtw")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_nag46")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qwo5a"]
animation = &"turnLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2bgwo"]
animation = &"turnRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i0wi1"]
animation = &"turnUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n4rpg"]
animation = &"turnDown"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_bfyhu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qwo5a")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_2bgwo")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_i0wi1")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_n4rpg")
blend_point_3/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f1wjv"]
reset = false
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nw76w"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wo0vf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_37tmo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vlaom"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_whfpy"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nms58"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lfxqm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_78557"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rascc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ic4h2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_frg2r"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hejto"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pe3uy"]
states/Chair/node = SubResource("AnimationNodeAnimation_vvql1")
states/Chair/position = Vector2(633, 62.4467)
states/ChairDown/node = SubResource("AnimationNodeAnimation_g8cjr")
states/ChairDown/position = Vector2(444, 62.4467)
states/End/position = Vector2(849, 259)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_53o1p")
states/Idle/position = Vector2(444, 193)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_yk6ly")
states/Move/position = Vector2(702, 259)
states/Start/position = Vector2(275, 193)
states/Turn/node = SubResource("AnimationNodeBlendSpace2D_bfyhu")
states/Turn/position = Vector2(444, 328)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_f1wjv"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_nw76w"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_wo0vf"), "Idle", "Turn", SubResource("AnimationNodeStateMachineTransition_37tmo"), "Turn", "Idle", SubResource("AnimationNodeStateMachineTransition_vlaom"), "Move", "Turn", SubResource("AnimationNodeStateMachineTransition_whfpy"), "Turn", "Move", SubResource("AnimationNodeStateMachineTransition_nms58"), "Idle", "Chair", SubResource("AnimationNodeStateMachineTransition_lfxqm"), "Move", "Chair", SubResource("AnimationNodeStateMachineTransition_78557"), "ChairDown", "Move", SubResource("AnimationNodeStateMachineTransition_rascc"), "Chair", "Move", SubResource("AnimationNodeStateMachineTransition_ic4h2"), "Idle", "ChairDown", SubResource("AnimationNodeStateMachineTransition_frg2r"), "Move", "ChairDown", SubResource("AnimationNodeStateMachineTransition_hejto")]
graph_offset = Vector2(0, -35.0207)

[node name="Oak" type="CharacterBody2D" groups=["Persist"]]
collision_mask = 14
safe_margin = 0.001
script = ExtResource("1_4ift8")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 26

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_lconu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_fmnmb")

[node name="Shadow" parent="." instance=ExtResource("2_rdqlm")]
visible = false
y_sort_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
texture = ExtResource("2_05a7t")
centered = false
offset = Vector2(0, -4)
hframes = 3
vframes = 4
frame = 1

[node name="DustEffect" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_etf16")
frame = 2
frame_progress = 1.0
centered = false
offset = Vector2(0, 1)
script = ExtResource("5_btt4e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1kj2f")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1kj2f")
}
tree_root = SubResource("AnimationNodeStateMachine_pe3uy")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(-0.000947893, 0.73545)
parameters/Move/blend_position = Vector2(0, 0)
parameters/Turn/blend_position = Vector2(0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 384
limit_bottom = 256
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("6_kxb0c")

[node name="BlockRayCast2D" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(0, 8)
collision_mask = 14

[node name="NPCRayCast2D" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(0, 8)
collision_mask = 8

[node name="ObjectRayCast2D" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(0, 8)
collision_mask = 16

[node name="LedgeRayCast2D" type="RayCast2D" parent="."]
show_behind_parent = true
position = Vector2(8, 8)
target_position = Vector2(0, 8)
collision_mask = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="animation_finished" from="DustEffect" to="DustEffect" method="_on_animation_finished"]
